--- a/trunk/mscore/config.h.in
+++ b/trunk/mscore/config.h.in
@@ -22,6 +22,7 @@
 #cmakedefine USE_JACK
 #cmakedefine USE_PORTAUDIO
 #cmakedefine USE_PORTMIDI
+#cmakedefine USE_PULSEAUDIO
 
 #cmakedefine MSCORE_UNSTABLE
 
