--- a/branches/mscore-0-9-6/Makefile.osx
+++ b/branches/mscore-0-9-6/Makefile.osx
@@ -21,8 +21,8 @@
 REVISION  = `cat mscore/mscore/revision.h`
 CPUS      = `grep -c processor /proc/cpuinfo`
 
-VERSION   = "1.2r${REVISION}"
-#VERSION   = 1.1
+#VERSION   = "1.3r${REVISION}"
+VERSION   = 1.3
 
 PREFIX=../applebuild
 
