--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -20,15 +20,15 @@
 
 
 REVISION  = $(shell type mscore\mscore\revision.h)
-VERSION   = 1.2r${REVISION}
-MINGW_DIR = C:\QtSDK\mingw
+VERSION   = 1.3r${REVISION}
+MINGW_DIR = C:\mingw
 
 release:
 	if not exist win32build\nul mkdir win32build
 	if not exist win32install\nul mkdir win32install
 	cd win32build & cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE=../mscore/cmake/mingw32.mingw.cmake -DCMAKE_INSTALL_PREFIX=../win32install -DCMAKE_BUILD_TYPE=RELEASE -DCMAKE_MAKE_PROGRAM=${MINGW_DIR}\bin\mingw32-make.exe ../mscore                                
 	cd win32build & $(MAKE) lrelease                         
-	cd win32build & $(MAKE)
+	cd win32build & $(MAKE) "MAKE=$(MAKE) -j2"
 
 debug:
 	if not exist win32build\nul mkdir win32build
