--- a/mscore/packaging/NSIS.template.in
+++ b/mscore/packaging/NSIS.template.in
@@ -151,7 +151,7 @@ Var AR_RegFlags
 ;--- End of Add/Remove macros ---
 
 Function InstallDesktopShortcut
-  CreateShortcut "$DESKTOP\MuseScore.lnk" "$INSTDIR\bin\@CPACK_PACKAGE_NAME@.exe"
+  CreateShortcut "$DESKTOP\MuseScore.lnk" "$INSTDIR\bin\mscore.exe"
 FunctionEnd
 
 Function un.InstallDesktopShortcut
@@ -165,7 +165,7 @@ FunctionEnd
   !define MUI_ABORTWARNING
   !define MUI_FINISHPAGE_LINK "http://musescore.org"
   !define MUI_FINISHPAGE_LINK_LOCATION "http://musescore.org"
-  !define MUI_FINISHPAGE_RUN "$INSTDIR\bin\@CPACK_PACKAGE_NAME@.exe"
+  !define MUI_FINISHPAGE_RUN "$INSTDIR\bin\mscore.exe"
   !define MUI_FINISHPAGE_SHOWREADME ""
   !define MUI_FINISHPAGE_SHOWREADME_CHECKED
   !define MUI_FINISHPAGE_SHOWREADME_TEXT $(createDesktopShortcut)
