--- a/branches/mscore-0-9-6/mscore/packaging/NSIS.template.in
+++ b/branches/mscore-0-9-6/mscore/packaging/NSIS.template.in
@@ -577,14 +577,11 @@ FunctionEnd
   !insertmacro MUI_LANGUAGE "Hungarian"
   !insertmacro MUI_LANGUAGE "Icelandic"
   !insertmacro MUI_LANGUAGE "Indonesian"
-  !insertmacro MUI_LANGUAGE "Irish"
   !insertmacro MUI_LANGUAGE "Italian"
   !insertmacro MUI_LANGUAGE "Japanese"
   !insertmacro MUI_LANGUAGE "Korean"
-  !insertmacro MUI_LANGUAGE "Kurdish"
   !insertmacro MUI_LANGUAGE "Latvian"
   !insertmacro MUI_LANGUAGE "Lithuanian"
-  !insertmacro MUI_LANGUAGE "Luxembourgish"
   !insertmacro MUI_LANGUAGE "Macedonian"
   !insertmacro MUI_LANGUAGE "Malay"
   !insertmacro MUI_LANGUAGE "Mongolian"
@@ -595,7 +592,6 @@ FunctionEnd
   !insertmacro MUI_LANGUAGE "Romanian"
   !insertmacro MUI_LANGUAGE "Russian"
   !insertmacro MUI_LANGUAGE "Serbian"
-  !insertmacro MUI_LANGUAGE "SerbianLatin"
   !insertmacro MUI_LANGUAGE "SimpChinese"
   !insertmacro MUI_LANGUAGE "Slovak"
   !insertmacro MUI_LANGUAGE "Slovenian"
@@ -605,14 +601,53 @@ FunctionEnd
   !insertmacro MUI_LANGUAGE "TradChinese"
   !insertmacro MUI_LANGUAGE "Turkish"
   !insertmacro MUI_LANGUAGE "Ukrainian"
-  !insertmacro MUI_LANGUAGE "Welsh"
   
   LangString createDesktopShortcut ${LANG_ENGLISH} "Create desktop shortcut"
-  LangString createDesktopShortcut ${LANG_FRENCH} "Créer un raccourci sur le bureau"
-  LangString createDesktopShortcut ${LANG_SPANISH} "Crear un acceso directo en el escritorio"
+  LangString createDesktopShortcut ${LANG_ALBANIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_ARABIC} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_BASQUE} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_BELARUSIEN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_BOSNIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_BRETON} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_BULGARIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_CROATIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_CZECH} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_DANISH} "Create desktop shortcut"
   LangString createDesktopShortcut ${LANG_DUTCH} "Snelkoppeling op bureablad aanmaken"
+  LangString createDesktopShortcut ${LANG_ESTONIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_FARSI} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_FINNISH} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_FRENCH} "Créer un raccourci sur le bureau"
   LangString createDesktopShortcut ${LANG_GERMAN} "Desktop-Verknüpfung erstellen"
-
+  LangString createDesktopShortcut ${LANG_GREEK} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_HEBREW} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_HUNGARIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_ICELANDIC} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_INDONESIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_ITALIAN} "Aggiungi collegamento al desktop"
+  LangString createDesktopShortcut ${LANG_JAPANESE} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_KOREAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_LATVIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_LITHUANIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_MACEDONIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_MALAY} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_MONGOLIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_NORWEGIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_POLISH} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_PORTUGUESE} "Create desktop shortcut"
+  LangString createDesktopShortcut ${SUBLANG_PORTUGUESE_BRAZILIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_ROMANIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_RUSSIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_SERBIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${SUBLANG_CHINESE_SIMPLIFIED} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_SLOVAK} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_SLOVENIAN} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_SPANISH} "Crear un acceso directo en el escritorio"
+  LangString createDesktopShortcut ${LANG_SWEDISH} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_THAI} "Create desktop shortcut"
+  LangString createDesktopShortcut ${SUBLANG_CHINESE_TRADITIONAL} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_TURKISH} "Create desktop shortcut"
+  LangString createDesktopShortcut ${LANG_UKRAINIAN} "Create desktop shortcut"
 
 ;--------------------------------
 ;Reserve Files
